--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head></head>
 
 <body>
-    Hello world
+    <form>
+        <input type="text" id="txt">
+        <input type="button" id="btn">
+    </form>
+
+    <p id="emptyText"></p>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
