--- a/index.html
+++ b/index.html
@@ -1,15 +1,103 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <title>GitGet</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-image: url('images/image2.svg');
+            background-repeat: repeat-x repeat-y;
+            background-position: 100%;
+            background-position-x: 100%;
+            background-position-y: center;
+            max-width: 1500px;
+            margin: 0 auto;
+            padding: 0 50px;
+            font-family: 'Baloo Bhaina 2', cursive;
+            color: white;
+        }
+    </style>
+    <link rel="icon" type="image/png" href="images/icon.png">
+</head>
 
 <body>
+
+    <div>
+        <h1 style="font-size: 3em;">Welcome to<br> GitGet</h1>
+        <img src="#" alt="Website logo">
+        <p>GitGet is a tool to display Github profile details. Simply enter the username of the account and hit search,
+            you should then be presented with all the account information pertaining to that user.</p>
+    </div>
     <form>
         <input type="text" id="txt">
-        <input type="button" id="btn">
+        <input type="button" id="btn" value="search" class="btn btn-info">
     </form>
 
     <p id="emptyText"></p>
+
+
+
+
+    <!-- Footer-->
+    <footer class="footer text-center" id="location">
+        <div class="container">
+            <div class="row">
+                <!-- Footer Location-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Github Repo</h4>
+                    <p class="lead mb-0">Checkout on <a target="_blank"
+                            href="https://github.com/ridwan098/GitGet">Github</a> <br />
+                    </p>
+                </div>
+                <!-- Footer Social Icons-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="mailto:ridwanishola97@gmail.com"><i
+                            class="fab fa-fw  fas fa-envelope-open-text"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/ridwan098"
+                        target="_blank"><i class="fab fa-fw fa-github"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social mx-1"
+                        href="https://www.linkedin.com/in/ridwan-ishola-117033189/" target="_blank"><i
+                            class="fab fa-fw fa-linkedin-in"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-dribbble"
+                            target="_blank"></i>
+                    </a>
+                </div>
+                <!-- Footer About Text-->
+                <div class="col-lg-4">
+
+                    <div class="navbar-nav ml-auto mobile-kofi">
+                        <h4 class="text-uppercase mb-4">Buy Me A ko-fi</h4>
+                        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
+                        <script type='text/javascript'>
+                            kofiwidget2.init('Buy Me a Coffee', '#e02828', 'R1D1M1LL');
+                            kofiwidget2.draw();
+                        </script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Copyright Section-->
+    <section class="copyright py-4 text-center text-white">
+        <div class="container"><small>Copyright © <a href="https://ridwan.co.uk" target="_blank">Ridwan Gbadamosi</a>
+                2020</small></div>
+    </section>
+
+
+
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
