changes to front page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,28 @@
 
 <body>
 
-    <div>
+
+    <div class="jumbotron" style="background: none;">
+        <div class="container text-center">
+            <h1>My Portfolio</h1>
+            <p>Some text that represents "Me"...</p>
+        </div>
+    </div>
+
+    <div class="jumbotron" style="background: none;">
+        <div class="container text-center">
+            <h1>My Portfolio</h1>
+            <p>Some text that represents "Me"...</p>
+        </div>
+    </div>
+
+    <div class="jumbotron" style="visibility: hidden;">
+
+    </div>
+
+
+
+    <!-- <div class="center">
         <h1 style="font-size: 3em;">Welcome to<br> GitGet</h1>
         <img src="#" alt="Website logo">
         <p>GitGet is a tool to display Github profile details. Simply enter the username of the account and hit search,
@@ -42,24 +63,25 @@
         <input type="button" id="btn" value="search" class="btn btn-info">
     </form>
 
-    <p id="emptyText"></p>
-
+    <p id="emptyText"></p> -->
 
 
 
     <!-- Footer-->
-    <footer class="footer text-center" id="location">
+    <footer class="footer text-center cent" id="location">
         <div class="container">
             <div class="row">
                 <!-- Footer Location-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-4 mb-4 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Github Repo</h4>
-                    <p class="lead mb-0">Checkout on <a target="_blank"
-                            href="https://github.com/ridwan098/GitGet">Github</a> <br />
+                    <p class="lead mb-0">Checkout on <a target="_blank" href="https://github.com/ridwan098/GitGet"
+                            style="text-decoration: none;">Github</a> <br />
                     </p>
                 </div>
+
+
                 <!-- Footer Social Icons-->
-                <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="col-lg-4 mb-4 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="mailto:ridwanishola97@gmail.com"><i
                             class="fab fa-fw  fas fa-envelope-open-text"></i>
@@ -75,26 +97,32 @@
                             target="_blank"></i>
                     </a>
                 </div>
-                <!-- Footer About Text-->
-                <div class="col-lg-4">
 
-                    <div class="navbar-nav ml-auto mobile-kofi">
-                        <h4 class="text-uppercase mb-4">Buy Me A ko-fi</h4>
-                        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
-                        <script type='text/javascript'>
-                            kofiwidget2.init('Buy Me a Coffee', '#e02828', 'R1D1M1LL');
-                            kofiwidget2.draw();
-                        </script>
-                    </div>
+
+                <!-- Footer about ko-fi Icons-->
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Buy Me A ko-fi</h4>
+                    <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script>
+                    <script type='text/javascript'>
+                        kofiwidget2.init('Buy Me a Coffee', '#e02828', 'R1D1M1LL');
+                        kofiwidget2.draw();
+                    </script>
                 </div>
+
+
+
+
             </div>
         </div>
+
+        <!-- Copyright Section-->
+        <section class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright © <a href="https://ridwan.co.uk" target="_blank">Ridwan
+                        Gbadamosi</a>
+                    2020</small></div>
+        </section>
     </footer>
-    <!-- Copyright Section-->
-    <section class="copyright py-4 text-center text-white">
-        <div class="container"><small>Copyright © <a href="https://ridwan.co.uk" target="_blank">Ridwan Gbadamosi</a>
-                2020</small></div>
-    </section>
+
 
 
 
