final home page design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap" rel="stylesheet">
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="images/logo2.png">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <style>
         body {
             background-image: url('images/image2.svg');
@@ -55,7 +55,7 @@
 
             <h1 style="margin-top: 100px;">GitGet</h1>
             <p>Display Github account info with GitGet </p>
-            <img src="images/logo2.png" alt="GitGet logo" style="width: 100px;"><br><br>
+            <img src="images/logo.png" alt="GitGet logo" style="width: 100px;"><br><br>
             <input type="text" id="txt" placeholder="Enter username">
             <input type="button" id="btn" value="GitGet User" class="btn btn-primary">
             <p id="emptyText"></p>
